--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@rollup/plugin-alias": "^3.1.2",
     "marked": "^2.0.1",
     "sirv-cli": "^1.0.0",
-    "svelte-range-slider-pips": "^1.7.0"
+    "svelte-range-slider-pips": "^1.7.0",
+    "svelte-select": "^3.17.0"
   }
 }
