--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-dnd-action": "^0.9.1",
-    "svelte-grid": "^4.0.1"
+    "svelte-grid": "^4.0.1",
+    "svelte-toggle": "^3.0.0"
   },
   "dependencies": {
     "@rollup/plugin-alias": "^3.1.2",
